--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -1,12 +1,23 @@
+h1 {
+    font-family: 'Tapestry', cursive;
+    font-size: 80px;
+}
+
+nav {
+    font-style: revert;
+    font-size: 40px;
+}
+
 table {
     background-color: #d6bef5;
 }
 
 .footer {
+
     background-color: #a4c9c9;
     position: absolute;
-    left: 0;
-    bottom: 0;
+    left: 0px;
+    bottom: 0px;
     width: 100%;
-    height: 80px;
+    height: 20px;
 }
