--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -24,20 +24,58 @@ TH {
     background: #90e3ee; /* Цвет фона */
 }
 
-.footer {
-
-    background-color: #a4c9c9;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 20px;
+html, body {
+    height: 100%;
 }
+body {
+    display: flex;
+    flex-direction: column;
+}
+
+.main {
+    flex: 1;
+}
+#footer {
+    background: #a4c9c9;
+    display: table-row;
+    height: 80px;
+}
+
+#wrapper {
+    display: table;
+    height: 100%;
+}
+
+#header {
+    height: 100px;
+}
+
+
+
+#wrapper, #footer {
+    width: 100%;
+}
+
+
+/*.footer {*/
+/*background-color: #a4c9c9;*/
+/*    position: absolute;*/
+/*    left: 0;*/
+/*    bottom: 0;*/
+/*    width: 100%;*/
+/*    height: 20px;*/
+/*}*/
 
 .error {
     font-family: 'Tapestry', cursive;
     font-size: 120px;
 }
+
+
+
+
+
+
 
 /*Style +- quantity book*/
 .number {
@@ -45,6 +83,7 @@ TH {
     position: relative;
     width: 100px;
 }
+
 .number input[type="number"] {
     display: block;
     height: 32px;
@@ -58,10 +97,12 @@ TH {
     -webkit-appearance: textfield;
     appearance: textfield;
 }
+
 .number input[type="number"]::-webkit-outer-spin-button,
 .number input[type="number"]::-webkit-inner-spin-button {
     display: none;
 }
+
 .number-minus {
     position: absolute;
     top: 1px;
@@ -76,6 +117,7 @@ TH {
     font-size: 16px;
     font-weight: 600;
 }
+
 .number-plus {
     position: absolute;
     top: 1px;
