--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -3,123 +3,42 @@ h1 {
     font-size: 70px;
 }
 
-nav {
-    font-style: revert;
-    font-size: 40px;
-}
-
-TABLE {
-    /*width: 600px;   Ширина таблицы */
+table {
+    /*width: 100%; !* Ширина таблицы *!*/
     border-collapse: collapse; /* Убираем двойные линии между ячейками */
     border: 2px solid black;
 }
 
-TD, TH {
+tr :first-child {
+    width: 0;
+    white-space: nowrap;
+}
+
+td, th {
     padding: 5px; /* Поля вокруг содержимого таблицы */
     border: 1px solid black; /* Параметры рамки */
 }
 
-TH {
+th {
     border: 2px solid black;
     background: #90e3ee; /* Цвет фона */
 }
 
-html, body {
-    height: 100%;
-}
-body {
-    display: flex;
-    flex-direction: column;
+.main {
+    background: url(../images/fon_knizhnie_polki.jpg) no-repeat center;
+    width: auto;
+    height: auto;
+    margin: 0;
+    padding: 0;
+    background-size: cover;
+    position: relative;
 }
 
 .main {
-    flex: 1;
-}
-#footer {
-    background: #a4c9c9;
-    display: table-row;
-    height: 80px;
+    min-height: calc(100% - 20px);
 }
 
-#wrapper {
-    display: table;
-    height: 100%;
-}
-
-#header {
-    height: 100px;
-}
-
-
-
-#wrapper, #footer {
-    width: 100%;
-}
-
-
-/*.footer {*/
-/*background-color: #a4c9c9;*/
-/*    position: absolute;*/
-/*    left: 0;*/
-/*    bottom: 0;*/
-/*    width: 100%;*/
-/*    height: 20px;*/
+/*html, body {*/
+/*    height: 100%;*/
 /*}*/
 
-
-
-/*Style +- quantity book*/
-.number {
-    display: inline-block;
-    position: relative;
-    width: 100px;
-}
-
-.number input[type="number"] {
-    display: block;
-    height: 32px;
-    line-height: 32px;
-    width: 100%;
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    text-align: center;
-    -moz-appearance: textfield;
-    -webkit-appearance: textfield;
-    appearance: textfield;
-}
-
-.number input[type="number"]::-webkit-outer-spin-button,
-.number input[type="number"]::-webkit-inner-spin-button {
-    display: none;
-}
-
-.number-minus {
-    position: absolute;
-    top: 1px;
-    left: 1px;
-    bottom: 1px;
-    width: 20px;
-    padding: 0;
-    display: block;
-    text-align: center;
-    border: none;
-    border-right: 1px solid #ddd;
-    font-size: 16px;
-    font-weight: 600;
-}
-
-.number-plus {
-    position: absolute;
-    top: 1px;
-    right: 1px;
-    bottom: 1px;
-    width: 20px;
-    padding: 0;
-    display: block;
-    text-align: center;
-    border: none;
-    border-left: 1px solid #ddd;
-    font-size: 16px;
-    font-weight: 600;
-}
