--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -43,3 +43,40 @@ header {
     background-size: cover;
 }
 
+/*NAVBAR*/
+
+#nav {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    border: 2px solid #0066FF;
+    border-radius: 20px 5px;
+    width: 100%;
+    text-align: match-parent;
+    background-color: #33ADFF;
+}
+
+
+#nav li {
+    display: inline;
+}
+
+#nav a {
+    color: #fff;
+    padding: 5px 10px;
+    text-decoration: none;
+    font-weight: bold;
+    display: inline;
+    width: 100px;
+}
+
+#nav a:hover {
+    border-radius: 20px 5px;
+    background-color: #0066FF;
+}
+/*FOOTER*/
+.footer {
+    background-color: #33ADFF;
+    height: auto;
+    margin-top: 10px;
+}
