--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,6 +1,8 @@
 h1 {
     font-family: 'Tapestry', cursive;
     font-size: 70px;
+    color: cornflowerblue;
+    text-shadow: 1px 1px 2px whitesmoke, 0 0 2em whitesmoke;
 }
 
 table {
@@ -41,6 +43,7 @@ header {
     display: block;
     background: url('../images/fon_knizhnie_polki.jpg') no-repeat center;
     background-size: cover;
+    text-shadow: 1px 1px 2px whitesmoke, 0 0 2em whitesmoke;
 }
 
 /*NAVBAR*/
