--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,7 +1,7 @@
 h1 {
     font-family: 'Tapestry', cursive;
     font-size: 70px;
-    color: cornflowerblue;
+    color: #164d7a;
     text-shadow: 1px 1px 2px whitesmoke, 0 0 2em whitesmoke;
 }
 
@@ -44,6 +44,13 @@ header {
     background: url('../images/fon_knizhnie_polki.jpg') no-repeat center;
     background-size: cover;
     text-shadow: 1px 1px 2px whitesmoke, 0 0 2em whitesmoke;
+}
+
+/*MAIN PAGE*/
+.main_page {
+    font-family: "Bauhaus 93", sans-serif;
+    font-size: 32px;
+    font-weight: bold;
 }
 
 /*NAVBAR*/
